1999-03-27  Tom Tromey  <tromey@cygnus.com>

	* scripts.am (install-@DIR@SCRIPTS): Use NDIR when appropriate.
	(uninstall-@DIR@SCRIPTS): Likewise.
	* progs.am (install-@DIR@PROGRAMS): Use NDIR when appropriate.
	(uninstall-@DIR@PROGRAMS): Likewise.
	* ltlib.am (install-@DIR@LTLIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LTLIBRARIES): Likewise.
	* lisp.am (install-@DIR@LISP): Use NDIR when appropriate.
	(uninstall-@DIR@LISP): Likewise.
	* libs.am (install-@DIR@LIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LIBRARIES): Likewise.
	* java.am (install-@DIR@JAVA): Use NDIR when appropriate.
	(uninstall-@DIR@JAVA): Likewise.
	* header.am (install-@DIR@HEADERS): Use NDIR when appropriate.
	(uninstall-@DIR@HEADERS): Likewise.
	* data.am (install-@DIR@DATA): Use NDIR when appropriate.
	(uninstall-@DIR@DATA): Likewise.
	* Makefile.in: Rebuilt.
	* Makefile.am (dist_pkgdata_DATA): Renamed.
	(EXTRA_DIST): Removed.
	(install-data-hook): Added POST_INSTALL; print commands as they
	are run; respect DESTDIR.
	* dist-vars.am (DISTFILES): Removed $(HEADERS).
	* automake.in (am_install_var): Accept `-candist' and
	`-defaultdist' options.  Handle `dist_' and `nodist_' prefixes.
	(am_primary_prefixes): Added can_dist argument.  Recognize `dist_'
	and `nodist_' prefixes.
	(handle_scripts): Pass -candist to am_install_var.
	(handle_data): Pass -defaultdist to am_install_var.
	(handle_headers): Likewise.
	(handle_emacs_lisp): Pass -candist to am_install_var.
	(handle_java): Pass -candist to am_install_var.

1999-03-26  Tom Tromey  <tromey@cygnus.com>

	* m4/init.m4: Fixed typo when invoking SHELL.

	* automake.in (lang_yacc_finish): Always use `.h' as suffix for
	yacc header file.  From Ralf Corsepius.

	* Makefile.in: Rebuilt.
	* Makefile.am: Updated to reflect removal of TAR subst.
	* automake.texi (Options): Document dist-bzip2.
	* automake.in (TAR): Removed global.
	(initialize_global_constants): Changed `dist' to use pipe with
	gzip; work with non-GNU tar.