@@ -3251,7 +3251,7 @@ sub handle_configure
 sub handle_headers
 {
     local (@r);
-    @r = &am_install_var ('header', '-defaultdist', 'HEADERS', 'include',
+    @r = &am_install_var ('-defaultdist', 'header', 'HEADERS', 'include',
 			  'oldinclude', 'pkginclude',
 			  'noinst', 'check');
     foreach (@r)
@@ -4988,7 +4988,8 @@ sub saw_sources_p
     }
     else
     {
-	$headers = defined $extension_seen{'header'};
+	local (@exts) = &lang_extensions ('header');
+	$headers = @exts;
     }
 
     return scalar keys %extension_seen > $headers;
@@ -6788,12 +6789,8 @@ sub am_install_var
 	    # all, or install targets.
 	    if ($X eq 'EXTRA')
 	    {
-		if (! $warned_about_extra && ! $do_require)
-		{
-		    $warned_about_extra = 1;
-		    &am_line_error ($one_name,
-				    "\`$one_name' should not be defined");
-		}
+		# We used to warn if EXTRA_FOO was defined uselessly,
+		# but this was annoying.
 		next;
 	    }
 
