@@ -1,5 +1,12 @@
 1999-03-27  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (saw_sources_p): Correctly count header extensions
+	seen.
+	(handle_headers): Fixed order of arguments to am_install_var.
+
+	* automake.in (am_install_var): Don't error if EXTRA_foo is
+	defined uselessly.
+
 	* scripts.am (install-@DIR@SCRIPTS): Use NDIR when appropriate.
 	(uninstall-@DIR@SCRIPTS): Likewise.
 	* progs.am (install-@DIR@PROGRAMS): Use NDIR when appropriate.
